--- a/COMP2000ExerciseFarmBnB/app/src/main/res/layout/availability_checker.xml
+++ b/COMP2000ExerciseFarmBnB/app/src/main/res/layout/availability_checker.xml
@@ -40,27 +40,68 @@
             android:textSize="30sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/arrival_date"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:backgroundTint="@color/background_green"
-            android:textAlignment="center"
-            android:text="test-arrival date"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content"
+            android:background="@color/background_green"
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/fab_margin"
+            android:paddingBottom="@dimen/fab_margin">
 
-        <TextView
-            android:id="@+id/departure_date"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:backgroundTint="@color/background_green"
-            android:textAlignment="center"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:backgroundTint="@color/background_green"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/white"
+                    android:paddingRight="@dimen/fab_margin"
+                    android:paddingLeft="@dimen/fab_margin"
+                    android:textSize="20sp"
+                    android:text="Arrival date" />
+
+        <Spinner
+            android:id="@+id/arrival_date"
+            android:layout_width="wrap_content"
+            android:paddingLeft="@dimen/fab_margin"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:textSize="20sp"
+            android:dropDownSelector="@color/white"
             android:textColor="@color/white"
-            android:textSize="30sp"
-            android:text="test-departure date"
-            android:textStyle="bold" />
+            android:spinnerMode="dropdown"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/background_green"
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/fab_margin">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:backgroundTint="@color/background_green"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/white"
+                    android:paddingRight="@dimen/fab_margin"
+                    android:paddingLeft="@dimen/fab_margin"
+                    android:textSize="20sp"
+                    android:text="Departure date" />
+
+                <TextView
+                    android:id="@+id/departure_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:backgroundTint="@color/background_green"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/white"
+                    android:paddingRight="@dimen/fab_margin"
+                    android:paddingLeft="@dimen/fab_margin"
+                    android:textSize="20sp"/>
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/booking_confirmation_load"
