Update to design and fixing of date issue

--- a/COMP2000ExerciseFarmBnB/app/src/main/res/layout/login_screen.xml
+++ b/COMP2000ExerciseFarmBnB/app/src/main/res/layout/login_screen.xml
@@ -24,6 +24,7 @@ android:orientation="vertical"
             android:layout_width="367dp"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:theme="@style/TextInput"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:hint="Email"
@@ -31,6 +32,7 @@ android:orientation="vertical"
 
         <EditText
             android:id="@+id/UserPassword"
+            android:theme="@style/TextInput"
             android:layout_width="367dp"
             android:layout_height="wrap_content"
             android:ems="10"
