--- a/COMP2000ExerciseFarmBnB/app/src/main/res/layout/sign_up_screen.xml
+++ b/COMP2000ExerciseFarmBnB/app/src/main/res/layout/sign_up_screen.xml
@@ -26,6 +26,7 @@ android:orientation="vertical"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:hint="Title"
+        android:theme="@style/TextInput"
         android:inputType="text" />
         <EditText
             android:id="@+id/UserFirstName"
@@ -34,6 +35,7 @@ android:orientation="vertical"
             android:ems="10"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
+            android:theme="@style/TextInput"
             android:hint="First Name"
             android:inputType="text" />
 
@@ -44,6 +46,7 @@ android:orientation="vertical"
         android:ems="10"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
+        android:theme="@style/TextInput"
         android:hint="Last Name"
         android:inputType="text" />
     <EditText
@@ -52,6 +55,7 @@ android:orientation="vertical"
         android:layout_height="wrap_content"
         android:ems="10"
         android:textColor="@color/white"
+        android:theme="@style/TextInput"
         android:textColorHint="@color/white"
         android:hint="Email Address"
         android:inputType="text" />
@@ -61,6 +65,7 @@ android:orientation="vertical"
         android:layout_height="wrap_content"
         android:ems="10"
         android:textColor="@color/white"
+        android:theme="@style/TextInput"
         android:textColorHint="@color/white"
         android:hint="Phone Number"
         android:inputType="text" />
@@ -72,12 +77,14 @@ android:orientation="vertical"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:hint="Home Address"
+        android:theme="@style/TextInput"
         android:inputType="text" />
     <EditText
         android:id="@+id/UserInputPassword"
         android:layout_width="367dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:theme="@style/TextInput"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:hint="Password"
