--- a/COMP2000ExerciseFarmBnB/app/src/main/res/values/themes.xml
+++ b/COMP2000ExerciseFarmBnB/app/src/main/res/values/themes.xml
@@ -18,6 +18,10 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+    <style name="TextInput">
+        <item name="colorControlNormal">@color/background_dark_green</item>
+        <item name="colorControlActivated">@color/background_dark_green</item>
+    </style>
 
     <style name="Theme.COMP2000ExerciseFarmBnB.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
