--- a/COMP2000ExerciseFarmBnB/app/src/main/res/layout/homescreen.xml
+++ b/COMP2000ExerciseFarmBnB/app/src/main/res/layout/homescreen.xml
@@ -59,5 +59,14 @@ android:orientation="vertical" >
             android:backgroundTint="@color/background_dark_green"
             android:text="Self Catering Barn"
             android:textColor="@color/white" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/background_green"
+        android:drawableLeft="@android:drawable/ic_media_previous"
+        android:onClick="LogOut"
+        android:text="Log out"
+        android:textColor="@color/white"
+        android:textAlignment="textStart"/>
 </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
