--- a/COMP2000ExerciseFarmBnB/app/src/main/res/layout/edit_account.xml
+++ b/COMP2000ExerciseFarmBnB/app/src/main/res/layout/edit_account.xml
@@ -28,7 +28,7 @@ android:orientation="vertical"
             android:textSize="34sp"
             android:textStyle="bold" />
     <EditText
-        android:id="@+id/UserTitle"
+        android:id="@+id/EditUserTitle"
         android:layout_width="367dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -38,7 +38,7 @@ android:orientation="vertical"
         android:theme="@style/TextInput"
         android:inputType="text" />
         <EditText
-            android:id="@+id/UserFirstName"
+            android:id="@+id/EditUserFirstName"
             android:layout_width="367dp"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -49,7 +49,7 @@ android:orientation="vertical"
             android:inputType="text" />
 
     <EditText
-        android:id="@+id/UserLastName"
+        android:id="@+id/EditUserLastName"
         android:layout_width="367dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -59,7 +59,7 @@ android:orientation="vertical"
         android:hint="Last Name"
         android:inputType="text" />
     <EditText
-        android:id="@+id/UserInputEmail"
+        android:id="@+id/EditUserInputEmail"
         android:layout_width="367dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -69,7 +69,7 @@ android:orientation="vertical"
         android:hint="Email Address"
         android:inputType="text" />
     <EditText
-        android:id="@+id/UserPhoneNumber"
+        android:id="@+id/EditUserPhoneNumber"
         android:layout_width="367dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -79,7 +79,7 @@ android:orientation="vertical"
         android:hint="Phone Number"
         android:inputType="text" />
     <EditText
-        android:id="@+id/UserHomeAddress"
+        android:id="@+id/EditUserHomeAddress"
         android:layout_width="367dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -89,7 +89,7 @@ android:orientation="vertical"
         android:theme="@style/TextInput"
         android:inputType="text" />
     <EditText
-        android:id="@+id/UserInputPassword"
+        android:id="@+id/EditUserInputPassword"
         android:layout_width="367dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -101,14 +101,24 @@ android:orientation="vertical"
 
 
     <Button
-        android:id="@+id/CreateNewAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/button_colour"
-        android:text="Create Account"
-        android:onClick="CreateAccount"
+        android:text="Update Details"
+        android:onClick="UpdateAccountDetails"
+        android:layout_marginBottom="10dp"
         android:textAlignment="center"
         android:textColor="@color/white" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/button_colour"
+                android:text="Delete Account"
+                android:onClick="DeleteAccount"
+                android:textAlignment="center"
+                android:textColor="@color/white" />
 
         </LinearLayout>
     </ScrollView>
