--- a/COMP2000ExerciseFarmBnB/app/src/main/res/layout/order_confirmation.xml
+++ b/COMP2000ExerciseFarmBnB/app/src/main/res/layout/order_confirmation.xml
@@ -17,16 +17,35 @@ android:orientation="vertical"
             android:textColor="@color/white"
             android:textSize="34sp"
             android:textStyle="bold" />
-    <Button
-        android:id="@+id/manage_bookings"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/background_green"
-        android:textAllCaps="false"
-        android:text="Manage Bookings"
-        android:onClick="LoadManageBookings"
-        android:textAlignment="textStart"
-        android:textColor="@color/white" />
+        android:weightSum="2"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/manage_bookings"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/background_green"
+            android:textAllCaps="false"
+            android:text="Manage Bookings"
+            android:onClick="LoadManageBookings"
+            android:textAlignment="textStart"
+            android:textColor="@color/white" />
+        <Button
+            android:id="@+id/manage_accounts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/background_green"
+            android:textAllCaps="false"
+            android:layout_weight="1"
+            android:text="Edit Account"
+            android:onClick="LoadEditAccount"
+            android:textAlignment="textEnd"
+            android:textColor="@color/white" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/booking_confirmation_booking_id"
