--- a/COMP2000ExerciseFarmBnB/app/src/main/res/values/colors.xml
+++ b/COMP2000ExerciseFarmBnB/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="background_green">#A6C1AC</color>
-    <color name="button_colour">#C4C4C4</color>
+    <color name="background_green">#97ad9c</color>
+    <color name="button_colour">#a8a8a8</color>
     <color name="background_dark_green">#709277</color>
 </resources>
